jumpin UI has been fixed

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,7 @@
 html, 
 body,
 #root {
+  width: 100vw;
   height: 100%;
 }
 
